--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -1,5 +1,7 @@
 security:
-    # https://symfony.com/doc/current/security.html#where-do-users-come-from-user-providers
+    role_hierarchy:
+        ROLE_ADMIN: [ROLE_USER, ROLE_ADMIN]
+        ROLE_USER: [ROLE_USER]
     providers:
         from_database:
             entity:
@@ -29,7 +31,11 @@ security:
     # Note: Only the *first* access control that matches will be used
     access_control:
         - { path: ^/admin, roles: ROLE_ADMIN }
-        # - { path: ^/profile, roles: ROLE_USER }
+        - { path: /challenges, roles: ROLE_USER }
+        - { path: /accueil, roles: ROLE_USER }
+        - { path: /tableau-de-bord, roles: ROLE_USER }
+        - { path: ^/historique, roles: ROLE_USER }
+        - { path: ^/parametre-de-compte, roles: ROLE_USER }
 
     encoders:
         App\Entity\User:
