--- a/composer.json
+++ b/composer.json
@@ -36,6 +36,7 @@
         "symfony/validator": "4.3.*",
         "symfony/web-link": "4.3.*",
         "symfony/web-server-bundle": "4.3.*",
+        "symfony/webpack-encore-bundle": "^1.7",
         "symfony/yaml": "4.3.*",
         "twig/extra-bundle": "^2.12|^3.0",
         "twig/twig": "^2.12|^3.0",
